Update requirements.txt file.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,40 @@ Django==4.2.22
 scikit-fuzzy==0.5.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
+asgiref==3.8.1
+Django==4.2.22
+numpy==2.0.2
+scikit-fuzzy==0.5.0
+sqlparse==0.5.3
+typing_extensions==4.14.0
+asgiref==3.8.1
+Django==4.2.22
+numpy==2.0.2
+scikit-fuzzy==0.5.0
+scipy==1.13.1
+sqlparse==0.5.3
+typing_extensions==4.14.0
+asgiref==3.8.1
+Django==4.2.22
+numpy==2.0.2
+scikit-fuzzy==0.5.0
+scipy==1.13.1
+sqlparse==0.5.3
+typing_extensions==4.14.0
+asgiref==3.8.1
+Django==4.2.22
+numpy==2.0.2
+packaging==25.0
+scikit-fuzzy==0.5.0
+scipy==1.13.1
+sqlparse==0.5.3
+typing_extensions==4.14.0
+asgiref==3.8.1
+Django==4.2.22
+networkx==3.2.1
+numpy==2.0.2
+packaging==25.0
+scikit-fuzzy==0.5.0
+scipy==1.13.1
+sqlparse==0.5.3
+typing_extensions==4.14.0
