--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,26 @@ scipy==1.13.1
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
+zipp==3.23.0asgiref==3.8.1
+contourpy==1.3.0
+cycler==0.12.1
+Django==4.2.22
+et_xmlfile==2.0.0
+fonttools==4.58.2
+importlib_resources==6.5.2
+kiwisolver==1.4.7
+matplotlib==3.9.4
+networkx==3.2.1
+numpy==2.0.2
+openpyxl==3.1.5
+packaging==25.0
+pillow==11.2.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+scikit-fuzzy==0.5.0
+scipy==1.13.1
+six==1.17.0
+sqlparse==0.5.3
+typing_extensions==4.14.0
+xlwt==1.3.0
 zipp==3.23.0
